tools/tests/ui/fail/l1037.cnf
// Test file for error code: L1037
// Expected error: Missing Type character in type annotation -- expected valid UTF-8 encoding
// Category: Syntax
// Layer: 1 (Lexer)

IDENTIFICATION DIVISION.
    PROGRAM "test-missing".
EVIRONMENT DIVISION.
    OS "invalid™utf8-chars".
